# polars-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: adult_census_income.py  covertype.ipynb  digits.ipynb  kannada_mnist.ipynb  newsgroups.ipynb
example/adult_census_income/: train.py
expts/playground-series-s5e1/: README.md
expts/playground-series-s5e1-tmp/eda/: main.ipynb  summary.md
expts/playground-series-s5e1-tmp/trial_001/: main.ipynb  submit.csv
expts/playground-series-s5e1/eda/: notebook.ipynb
expts/template/: README.md  abstract.md  experiment.md  submission.md
expts/template/eda/: notebook.ipynb
scripts/: append_methods.py  append_methods.sh  auto_generate.sh  const.py  insert_feature_engineering_methods.py  insert_gbdt_methods.py  insert_group_by_lazy_methods.py  insert_group_by_methods.py  insert_horizontal_methods.py  insert_in.sh  insert_in_gbdt.py  insert_in_group_by.py  insert_in_metrics.py  insert_in_pipeline.py  insert_methods.py  insert_metrics_methods.py  insert_optimize_methods.py  insert_pipeline_lazy_methods.py  insert_pipeline_methods.py  insert_pipeline_tests.py  insert_unified_io_methods.py  utils.py
src copy/polars_ml/: __init__.py  base.py
src copy/polars_ml/pipeline/: basic.py  eager.py  getattr.py  lazy.py  mixin.py
src/polars_ml/: __init__.py  apply.py  base.py  built_in.py  component.py  cv.py  eda.py  group_by.py  horizontal.py  impute.py  metrics.py  misc.py  optimize.py  pipeline.py  plot.py  preprocess.py  preprocessing.py  testing.py  transformer.py  typing.py  utility.py  utils.py
src/polars_ml/ensemble/: __init__.py  oof_stacking.py  stacker.py  stacking.py
src/polars_ml/fe/: __init__.py  openfe_.py  operator.py  polynomial.py
src/polars_ml/feature_engineering/: __init__.py  (+1 more)
template/: abstract.md
tests/: conftest.py  test_pipeline_basic.py  test_pipeline_group_by.py  test_pipeline_horizontal.py  test_pipeline_plot.py  test_pipeline_split.py  test_pipeline_stat.py  utils..py
tests/ensemble/: test_oof_stacking.py
tests/gbdt/: test_catboost.py  test_lightgbm.py  test_xgboost.py
tests/linear/: test_elastic_net.py  test_lasso.py  test_logistic_regression.py  test_regression.py  test_ridge.py
tests/optimize/: test_optuna.py
tests/pipeline/: test_base.py  test_basic.py  test_combine.py  test_concat.py  test_discretize.py  test_getattr.py  test_group_by.py  test_group_by_lazy.py  test_horizontal.py  test_join_agg.py  test_label_encode.py  test_misc.py  test_other.py  test_pipeline.py  test_pipeline_basic.py  test_pipeline_combine.py  test_pipeline_lazy.py  test_pipeline_power.py  test_pipeline_reduction.py  test_pipeline_scale.py  test_power.py  test_scale.py  test_stratify_sample.py
tests/polars_ml/: test_feature_importance.py  test_linear.py
tests/preprocessing/: test_discretizer.py  test_label_encoder.py  test_power_transformer.py  test_scaler.py
(+198 files in other folders)
