[project]
name = "polars-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "gizmrkv", email = "gizmrkv@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "inflection>=0.5.1",
    "lightgbm>=4.6.0",
    "openfe>=0.0.12",
    "optuna>=4.6.0",
    "optuna-integration>=4.6.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shortuuid>=1.0.13",
    "tqdm>=4.67.1",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "pytest>=9.0.2",
    "torch==2.7.1+cu118",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F401"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
