[project]
name = "polars-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gizmrkv", email = "gizmrkv@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",    "torch==2.7.1+cu118",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F401"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
